--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
     <meta charset="UTF-8">
     <title>Odin Project Recipes</title>
+    <link rel="stylesheet" href="indexstyles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="heading">Odin Recipes</h1>
     <ul>
-    <li><a href="recipes/lasagna.html">Lasagna</a></li>
-   <li><a href="recipes/prime-rib-roast.html">Prime Rib Roast</a></li>
+    <li class="first-list"><a href="recipes/lasagna.html">Lasagna</a></li>
+   <li class="second-list"><a href="recipes/prime-rib-roast.html">Prime Rib Roast</a></li>
     </ul>
 </body>
 </html>
