--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="styleslasagna.css">
 </head>
 <body>
-  <h1>Lasagna</h1>  
-  <img  src="img/lasagnapicture">
-  <h2><em>classic homemade lasagna</em></h2></h2>
-  <p>The best lasagna recipe is made with ingredients that you know, 
+  <h1 class="title">Lasagna</h1>  
+  <img  src="img/lasagnapicture" class="center">
+  <h2 class="caption"><em>classic homemade lasagna</em></h2>
+  <p class="description">The best lasagna recipe is made with ingredients that you know, 
     and it’s not difficult at all! 
     All you’ll need for this easy lasagna recipe is one pan, one bowl, and a 9×13 baking dish!</p>
-<h2><strong>ingredients</strong></h2>
-<ul>
+<h2 class="ingredients"><strong>ingredients</strong></h2>
+<ul class="ing-list">
     <li>lasagna noodles</li>
     <li>cheese</li>
     <li>onion</li>
@@ -20,8 +21,8 @@
     <li>italian seasoning</li>]
     <li>tomato sauce</li>
 </ul>
-<h2><strong>steps</strong></h2>
-<ol>
+<h2 class="steps"><strong>steps</strong></h2>
+<ol class="steps-list">
     <li>Preheat the oven to 350°F.</li>
     <li>In a large pot of salted water, boil lasagna noodles until al dente according to package directions.</li>
     <li>Drain, rinse under cold water, and set aside.</li>
