--- a/recipes/prime-rib-roast.html
+++ b/recipes/prime-rib-roast.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Prime Rib Roast</title>
+    <link rel="stylesheet" href="stylesprimeribroast.css">
 </head>
 <body>
 <h1>Prime Rib Roast</h1>  
 <img src="img/primerib">
-<h2><em>an impressive main dish</em></h2></h2>
-<h2><strong>ingredients</strong></h2>
-<ul>
+<h2 class="caption"><em>an impressive main dish</em></h2></h2>
+<h2 class="ingredients"><strong>ingredients</strong></h2>
+<ul class="ing-list">
 <li>3-4 ribs</li>
 <li>kosher salt</li>
 <li>black pepper</li>
 <li>peppercorn sauce</li>
 </ul>
-<h2><strong>steps</strong></h2>
-<ol>
+<h2 class="steps"><strong>steps</strong></h2>
+<ol class="steps-list">
     <li>When ready to cook preheat oven to 200f</li>
     <li>Place seasoned roast on wire rack</li>
     <li>Refridgerate overnight</li>
